// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardSidebarCollapse > renders with class correctly 1`] = `
"<div class=""><button type="button" aria-label="Collapse sidebar" data-slot="base" class="p-3"><span class="iconify i-lucide:panel-left-close" aria-hidden="true" data-slot="leadingIcon"></span>
    <!--v-if-->
    <!--v-if-->
  </button></div>"
`;

exports[`DashboardSidebarCollapse > renders with color correctly 1`] = `
"<div class=""><button type="button" aria-label="Collapse sidebar" data-slot="base" class=""><span class="iconify i-lucide:panel-left-close" aria-hidden="true" data-slot="leadingIcon"></span>
    <!--v-if-->
    <!--v-if-->
  </button></div>"
`;

exports[`DashboardSidebarCollapse > renders with side correctly 1`] = `
"<div class=""><button type="button" aria-label="Collapse sidebar" data-slot="base" class=""><span class="iconify i-lucide:panel-left-close" aria-hidden="true" data-slot="leadingIcon"></span>
    <!--v-if-->
    <!--v-if-->
  </button></div>"
`;

exports[`DashboardSidebarCollapse > renders with variant correctly 1`] = `
"<div class=""><button type="button" aria-label="Collapse sidebar" data-slot="base" class=""><span class="iconify i-lucide:panel-left-close" aria-hidden="true" data-slot="leadingIcon"></span>
    <!--v-if-->
    <!--v-if-->
  </button></div>"
`;
